# tech_task

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/application/repositories/: __init__.py  file_repository.py
src/application/services/: __init__.py  analysis_service.py  storage_service.py
src/application/use_cases/: __init__.py  analyze_file.py  get_analysis.py  list_files.py  upload_file.py
src/domain/: entities.py  exceptions.py
src/infrastructure/api/: dependencies.py  main.py
src/infrastructure/api/routers/: files.py
src/infrastructure/persistence/: models.py
src/infrastructure/persistence/repositories/: __init__.py  sqlalchemy_file_repository.py
src/infrastructure/services/: __init__.py  mock_ai_analyzer.py  openai_analyzer.py
src/infrastructure/storage/: __init__.py  minio_storage.py
